--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
 
   <property name="dotcover.exe" value="D:\TeamCity\buildAgent\tools\dotCover\dotcover.exe" />
   
-  <property name="msbuild.exe" value="C:\Windows\Microsoft.NET\Framework64\v4.0.30319\MSBuild.exe" />
+  <property name="msbuild.exe" value="C:\Program Files (x86)\MSBuild\12.0\Bin\amd64\MSBuild.exe" />
   
   <property name="nuget.exe" value="c:\tools\nuget.exe" />
 
